Closed
Bug 1592487
Opened 6 years ago
Closed 6 years ago
Assertion failure: CurrentThreadCanAccessRuntime(cx->runtime()), at js/src/threading/ProtectedData.cpp:65
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla72
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | --- | fixed |
People
(Reporter: gkw, Assigned: allstars.chh)
References
(Regression)
Details
(4 keywords, Whiteboard: [jsbugmon:update])
Attachments
(2 files)
The following testcase crashes on mozilla-central revision 25bf8e097e60 (build with --enable-debug --disable-profiling, run with --fuzzing-safe --ion-offthread-compile=off --ion-eager --gc-zeal=25,68):
try {} catch (e) {}
try {} catch (e) {}
try {
(function() {
(function() {});
})
} catch (e) {}
try {
t;
} catch (e) {}
try {} catch (e) {}
try {
try {
gcparam("markStackLimit", 1);
} catch (e) {}
} catch (e) {}
try {
(function() {
""(function() {});
})
} catch (e) {}
try {
for (t of Number) {
(function() {
(function() {});
})
}
} catch (e) {}
Backtrace:
#0 js::CheckMainThread<(js::AllowedHelperThread)0>::check (this=<optimized out>) at js/src/threading/ProtectedData.cpp:65
#1 0x000055c4d105c299 in js::ProtectedData<js::CheckMainThread<(js::AllowedHelperThread)0>, bool>::ref (this=0x7f6022c2a7c0) at js/src/threading/ProtectedData.h:140
#2 js::ProtectedData<js::CheckMainThread<(js::AllowedHelperThread)0>, bool>::operator=<bool> (this=0x7f6022c2a7c0, p=<optimized out>) at js/src/threading/ProtectedData.h:104
#3 js::GCMarker::processDelayedMarkingList (this=0x7f6022c2a728, color=(unknown: -80), budget=...) at js/src/gc/Marking.cpp:2636
#4 0x000055c4d1059db7 in js::GCMarker::markAllDelayedChildren (this=0x7f6022c2a728, budget=...) at js/src/gc/Marking.cpp:2672
/snip
For detailed crash information, see attachment.
| Reporter | ||
Comment 1•6 years ago
|
||
| Reporter | ||
Comment 2•6 years ago
|
||
autobisectjs shows this is probably related to the following changeset:
The first bad revision is:
changeset: https://hg.mozilla.org/mozilla-central/rev/e9b1077e6b4a
user: Yoshi Cheng-Hao Huang
date: Wed Oct 16 11:16:08 2019 +0000
summary: Bug 1564136 - Part 1: SweepMarkTask. r=jonco
Yoshi, is bug 1564136 a likely regressor?
Flags: needinfo?(allstars.chh)
Regressed by: 1564136
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → allstars.chh
Flags: needinfo?(allstars.chh)
| Assignee | ||
Updated•6 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•6 years ago
|
||
Updated•6 years ago
|
Priority: -- → P1
Pushed by allstars.chh@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/e1838571c234
update 'delayedMarkingWorkAdded' and 'markLaterArenas' to MainThreadOrGCTaskData. r=jonco
Comment 5•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Updated•6 years ago
|
status-firefox70:
--- → unaffected
status-firefox71:
--- → unaffected
status-firefox-esr68:
--- → unaffected
Flags: in-testsuite+
| Comment hidden (Intermittent Failures Robot) |
Comment 7•6 years ago
|
||
| bugherder landing | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•