Bug 1592487 - update 'delayedMarkingWorkAdded' and 'markLaterArenas' to MainThreadOrGCTaskData. r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D51091